--- a/paginas/receitadepao.html
+++ b/paginas/receitadepao.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/liststyle.css">
     <title>Receita de Pão</title>
 </head>
 <body>
@@ -22,6 +23,13 @@
         <li>Amassar | Amasar</li>
         <li>Assar | Hornear</li>
     </ol> 
+
+    <div class="caixa">
+    </div>
+    <div class="caixa2">
+    </div>
+    <div class="caixa3">
+    </div>
 </body>
 </html>
 
