Estudo de Box e Nav

--- a/paginas/receitadepao.html
+++ b/paginas/receitadepao.html
@@ -8,6 +8,16 @@
     <title>Receita de Pão</title>
 </head>
 <body>
+    <div class="menu">
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Outras Receitas</a></li>
+            <li><a href="">Redes Sociais</a></li>
+            <li><a href="">Contato</a></li>
+        </ul>
+
+    </div>
+
     <h1>Receita de pão</h1>
     
     <h2>Ingredientes</h2>
