--- a/paginas/index.html
+++ b/paginas/index.html
@@ -1,15 +1,25 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Estudos HTML e CSS</title>
         <link rel="stylesheet" href="../css/style.css">
 
     </head>
 
     <body>
-
+<nav>
+    <ul>
+        <li> <a href="responsive.html">Responsivo Estudo</a></li>
+        <li><a href="estilostipograficos.html"> Estilos Tipograficos Estudo</a></li>
+        <li></li>
+        <li></li>
+    </ul>
+</nav>
+        
+        
         <h1>Gatinho Preto Fofo ou Gatinho Branco Malvado?</h1>
         <h2><a href="preto.html">Gatinho Preto</a> ou <a href="branco.html">Gatinho Branco</a> ?</h2>
         <h3><a href="pseudoclasses.html">Pseudoclasses</a></h3>
